<resources>
    <string name="app_name">TransportApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_announcement_detail">AnnouncementDetail</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="loreipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="download_date">Download date</string>
    <string name="load_date">Load date</string>
    <string name="you_are_publishing_as">You are publishing as:</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="publication_details">Publication details</string>
    <string name="send_n_porposal">Send \n porposal</string>
    <string name="publish">Publish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_submitting_a_proposal_as_carrier_to">You are submitting a proposal as carrier to:</string>
    <string name="offer">Offer</string>
    <string name="proposal_details">Proposal details</string>
    <string name="shipper">Shipper</string>
    <string name="carrier">Carrier</string>

       
    <string-array name="type_array">
               
        <item>Parcels</item>
        <item>Palletized</item>
        <item>In Bulk</item>
        <item>Container</item>
        <item>Furniture</item>
        <item>Vehicles</item>
        <item>Boats</item>
        <item>Machinery</item>
        <item>Animals</item>
        <item>Move</item>
        <item>Foods</item>
        <item>Others</item>
           
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
