
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="erasmus.transportapp.PublishActivityFragment"
    tools:showIn="@layout/activity_publish">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_publishing_as"
            android:id="@+id/tv_publishingAs" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_group"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrier"
                android:id="@+id/rb_carrier"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipper"
                android:id="@+id/rb_shipper"/>
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/tv_priceLabel"
                android:layout_weight="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$50"
                android:id="@+id/tv_priceNumber"
                android:layout_weight="2"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_price"
            android:layout_gravity="center_horizontal"
            android:max="2900" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/tv_type"
                android:layout_weight="2"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_type"
                android:layout_weight="2"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/load_date"
                android:id="@+id/tv_loadDateLabel"
                android:layout_gravity="center_vertical"
                android:layout_weight="3" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="6"
                android:id="@+id/et_loadDate"
                android:layout_gravity="center_vertical"
                android:editable="true" />

            <!--TODO: Cambiar el icono de calendario-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:id="@+id/btn_loadDate" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_date"
                android:id="@+id/tv_downloadDate"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="6"
                android:id="@+id/et_downloadDate"
                android:layout_gravity="center_vertical"
                android:editable="true" />

            <!--TODO: Cambiar el icono de calendario-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:id="@+id/btn_downloadDate"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:id="@+id/tv_originLabel"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_originText"
                android:text="Origin"
                android:layout_gravity="center_vertical" />

            <!--TODO: Cambiar el icono de location-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mylocation"
                android:id="@+id/btn_origin"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:id="@+id/tv_destinationLabel"
                android:layout_weight="3"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_destinationText"
                android:text="Destination"
                android:layout_gravity="center_vertical" />

            <!--TODO: Cambiar el icono de location-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mylocation"
                android:id="@+id/btn_destination"
                android:layout_gravity="center_vertical|end" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_details"
            android:id="@+id/tv_vehicleDetailsLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_vehicleDetails" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publication_details"
            android:id="@+id/tv_publicationDetailsLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_publicationDetails" />

    </LinearLayout>

</ScrollView>
