<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="erasmus.transportapp.SendPorposalFragment">


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_are_submitting_a_proposal_as_carrier_to"
                android:id="@+id/tv_proposalAs" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_avatarUser"
                    android:src="@android:drawable/star_big_on"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="User name"
                    android:id="@+id/tv_userName" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer"
                    android:id="@+id/tv_offerLabel"
                    android:layout_weight="2" />

                <!--TODO: CAMBIAR COMO SE PONE EL PRECIO EN EL LABEL-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$50"
                    android:id="@+id/tv_priceNumber"
                    android:layout_weight="2"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sb_price" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/load_date"
                    android:id="@+id/tv_loadDateLabel"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="6"
                    android:id="@+id/et_loadDate"
                    android:layout_gravity="center_vertical"
                    android:editable="true" />

                <!--TODO: Cambiar el icono de calendario-->
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:id="@+id/btn_loadDate" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_date"
                    android:id="@+id/tv_downloadDate"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="6"
                    android:id="@+id/et_downloadDate"
                    android:layout_gravity="center_vertical"
                    android:editable="true" />

                <!--TODO: Cambiar el icono de calendario-->
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:id="@+id/btn_downloadDate"
                    android:layout_gravity="end" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proposal_details"
                android:id="@+id/tv_proposalDetailsLabel"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_proposalDetails"
                android:layout_marginTop="2dp" />

        </LinearLayout>

</ScrollView>

